[package]
name = "blizzardup-aws"
version = "1.0.0-alpha.4" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "blizzardup-aws"
path = "src/main.rs"

[dependencies]
avalanche-types = { version = "0.1.4", features = ["avalanchego", "jsonrpc_client", "subnet_evm"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.30.2", features = ["cloudformation", "cloudwatch", "ec2", "s3", "sts"] } # https://github.com/gyuho/aws-manager/tags
aws-sdk-cloudformation = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-ec2 = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
aws-sdk-s3 = "0.30.0" # https://github.com/awslabs/aws-sdk-rust/releases
clap = { version = "4.4.0", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
compress-manager = "0.0.10"
crossterm = "0.27.0"
dialoguer = "0.11.0"
dir-manager = "0.0.1"
env_logger = "0.10.0"
id-manager = "0.0.3"
lazy_static = "1.4.0"
log = "0.4.20"
primitive-types = "0.12.1" # https://crates.io/crates/primitive-types
prometheus-manager = "0.0.30"
random-manager = "0.0.5"
regex = "1.8.1"
reqwest = "0.11.18"
rust-embed = "8.0.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_yaml = "0.9.25" # https://github.com/dtolnay/serde-yaml/releases
signal-hook = "0.3.17"
tokio = { version = "1.32.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
tempfile = "3.8.0"
