[package]
name = "certs-manager"
version = "0.0.0" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.67"

[dependencies]
avalanche-types = { version = "0.0.236", features = ["cert"] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.24.3", features = ["kms", "s3"] } # https://github.com/gyuho/aws-manager/tags
log = "0.4.17"
tokio = { version = "1.25.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
cmp-manager = "0.0.1"
env_logger = "0.10.0"
random-manager = "0.0.2"
tokio-test = "0.4.2"
