[package]
name = "dev-machine-aws"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-ops-aws = { path = "../avalanche-ops-aws" }
aws = { path = "../aws" }
aws-sdk-cloudformation = "0.9.0"
clap = { version = "3.1.6", features = ["derive"] }
crossterm = "0.23.1"
dialoguer = "0.10.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
rust-embed = "6.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.3.0"
