[package]
name = "dev-machine-aws"
version = "0.0.8-pre"
edition = "2021"

[[bin]]
name = "dev-machine-aws"
path = "src/main.rs"

[dependencies]
aws = { path = "../aws" }
aws-sdk-cloudformation = "0.11.0"
clap = { version = "3.1.14", features = ["cargo", "derive"] }
crossterm = "0.23.2"
dialoguer = "0.10.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
rust-embed = "6.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.23"
tokio = { version = "1.18.0", features = ["full"] }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.3.0"
