[package]
name = "dev-machine-aws"
version = "0.0.9-pre"
edition = "2021"

[[bin]]
name = "dev-machine-aws"
path = "src/main.rs"

[dependencies]
avalanche-utils = { version = "0.0.3", features = ["full"] }
aws = { path = "../aws" }
aws-sdk-cloudformation = "0.12.0"
clap = { version = "3.1.18", features = ["cargo", "derive"] }
crossterm = "0.23.2"
dialoguer = "0.10.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
rust-embed = "6.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
tokio = { version = "1.18.2", features = ["full"] }

[dev-dependencies]
tempfile = "3.3.0"
