[package]
name = "infra-aws"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
avalanche-types = "0.0.28" # https://crates.io/crates/avalanche-types
aws-manager = "0.0.15"
aws-sdk-cloudwatch = "0.17.0"
chrono = "0.4.22"
compress-manager = "0.0.2"
http-manager = "0.0.1"
log = "0.4.17"
prometheus-manager = "0.0.10"
random-manager = "0.0.1"
rust-embed = "6.4.0"
serde_yaml = "0.9.10" # https://github.com/dtolnay/serde-yaml/releases
tokio = { version = "1.20.1", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
cmp-manager = "0.0.1"
env_logger = "0.9.0"
tokio-test = "0.4.2"
