[package]
name = "staking-key-cert-s3-downloader"
version = "0.8.3" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.69"

[dependencies]
avalanche-types = { version = "0.0.393", features = [] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.28.13", features = ["kms", "s3"] } # https://github.com/gyuho/aws-manager/tags
clap = { version = "4.3.0", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
