[package]
name = "staking-key-cert-s3-downloader"
version = "0.8.5" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.70"

[dependencies]
avalanche-types = { version = "0.0.400", features = [] } # https://crates.io/crates/avalanche-types
aws-manager = { version = "0.28.72", features = ["kms", "s3"] } # https://github.com/gyuho/aws-manager/tags
clap = { version = "4.3.10", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.29.1", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
