[package]
name = "staking-signer-key-s3-downloader"
version = "0.6.6-beta.0" # https://github.com/ava-labs/avalanche-ops/releases
edition = "2021"
rust-version = "1.69"

[dependencies]
aws-manager = { version = "0.28.0", features = ["kms", "s3"] } # https://github.com/gyuho/aws-manager/tags
clap = { version = "4.3.0", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.28.1", features = ["full"] } # https://github.com/tokio-rs/tokio/releases
