[package]
name = "subnet-evm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
num-bigint = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
utils = { path = "../utils" }

[dev-dependencies]
env_logger = "0.9.0"
