[package]
name = "subnetctl"
version = "0.0.7-pre"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-api = { path = "../avalanche-api" }
avalanche-types = { path = "../avalanche-types" }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
crossterm = "0.23.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
tokio = { version = "1.17.0", features = ["full"] }
utils = { path = "../utils" }
