[package]
name = "utils"
version = "0.0.1"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
chrono = "0.4.19"
dirs = "4.0.0"
flate2 = "1.0.23"
fs_extra = "1.2.0"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.17"
num-bigint = "0.4.3"
path-clean = "0.1.0"
regex = "1.5.5"
ring = "0.16.20"
ripemd = "0.1.1"
serde = { version = "1.0.137", features = ["derive"] }
tar = "0.4.38"
tokio = { version = "1.18.1", features = ["full"] }
url = "2.2.2"
walkdir = "2.3.2"
whoami = "1.2.1"
zip = "0.6.2"
# don't update until https://github.com/gyscos/zstd-rs/issues/147 is addressed
zstd = "0.10"

[dev-dependencies]
env_logger = "0.9.0"
tempfile = "3.3.0"
tokio-test = "0.4.2"
