[package]
name = "avalanchego"
version = "0.0.0"
edition = "2021"
rust-version = "1.62"
publish = true
description = "AvalancheGo configuration"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanchego"
readme = "README.md"

[dependencies]
avalanche-types = { version = "0.0.23", features = [] }
log = "0.4.17"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

[dev-dependencies]
env_logger = "0.9.0"
num-bigint = "0.4.3"
random-manager = "0.0.1"
rust-embed = "6.4.0"
tempfile = "3.3.0"
