[package]
name = "avalanchego"
version = "0.0.0"
edition = "2021"
rust-version = "1.64"
publish = true
description = "AvalancheGo configuration"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanchego"
readme = "README.md"

[dependencies]
avalanche-types = { version = "0.0.36" } # https://crates.io/crates/avalanche-types
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85" # https://github.com/serde-rs/json/releases

[dev-dependencies]
env_logger = "0.9.1"
num-bigint = "0.4.3"
random-manager = "0.0.1"
rust-embed = "6.4.1"
