[package]
name = "coreth"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
publish = true
description = "Avalanche coreth configuration"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/coreth"
readme = "README.md"

[dependencies]
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85" # https://github.com/serde-rs/json/releases

[dev-dependencies]
