[package]
name = "subnet-evm"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
publish = true
description = "Avalanche subnet-evm configuration"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/subnet-evm"
readme = "README.md"

[dependencies]
big-num-manager = "0.0.1"
log = "0.4.17"
num-bigint = "0.4.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85" # https://github.com/serde-rs/json/releases

[dev-dependencies]
env_logger = "0.9.0"
